--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="author" content="Alexei Zababurin"/>
-    <meta name="description" content="QS logo SVG-animation"/>
+    <!--<meta name="description" content="QS logo SVG-animation"/>-->
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/gradients.css">
 </head>
 <body>
     <div class="flex_container stripe-0">
@@ -16,7 +17,7 @@
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
-            <!--<svg class="flex_item"> </svg>-->
+            <svg class="flex_item"> </svg>
             <!--<svg class="flex_item"> </svg>-->
             <!--<svg class="flex_item"> </svg>-->
             <div class="flex_txt_block">Thank you for you scrolled</div>
