added link to repo
added link to repo

--- a/app/index.html
+++ b/app/index.html
@@ -6,21 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="author" content="Alexei Zababurin"/>
-    <!--<meta name="description" content="QS logo SVG-animation"/>-->
+    <meta name="description" content="QS logo SVG-animation"/>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/gradients.css">
 </head>
 <body>
     <div class="flex_container stripe-0">
+            <div class="flex_txt_block">DEMO of SVG-animation</div>
             <div class="flex_txt_block">Scroll down, please</div>
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
             <svg class="flex_item"> </svg>
-            <!--<svg class="flex_item"> </svg>-->
-            <!--<svg class="flex_item"> </svg>-->
             <div class="flex_txt_block">Thank you for you scrolled</div>
+
+        <div class="flex_txt_block">
+            <a href="https://github.com/Hydraulicus/4QS">
+            Open on GitHub
+            </a>
+        </div>
+
+        <div class="flex_txt_block">Hosted with<span style="color:red;"> ❤ </span> by GitHub</div>
     </div>
 
 <script src="js/snap.svg-min.js"></script>
